REST: Replace `invalid-statement-type` with `invalid-value`
Bug: T369038
