# repo/rest-api/src/RouteHandlers/ErrorResponseToHttpStatus.php
@@ -101,7 +101,6 @@ class ErrorResponseToHttpStatus {
 		UseCaseError::SITELINK_DATA_MISSING_TITLE => 400,
 		UseCaseError::SITELINK_TITLE_NOT_FOUND => 400,
 		UseCaseError::INVALID_SITELINK_TYPE => 400,
-		UseCaseError::INVALID_STATEMENT_TYPE => 400,
 		UseCaseError::STATEMENT_GROUP_PROPERTY_ID_MISMATCH => 400,
 		UseCaseError::PATCHED_INVALID_STATEMENT_GROUP_TYPE => 422,
 		UseCaseError::PATCHED_INVALID_STATEMENT_TYPE => 422,
