# repo/rest-api/src/RouteHandlers/openapi.json
@@ -4211,9 +4211,6 @@
               "duplicate-alias": {
                 "$ref": "#/components/examples/DuplicateAliasWithLanguageContextExample"
               },
-              "invalid-statement-type": {
-                "$ref": "#/components/examples/InvalidStatementTypeExample"
-              },
               "statement-data-missing-field": {
                 "$ref": "#/components/examples/StatementDataMissingFieldExample"
               },
@@ -8394,15 +8391,6 @@
           },
           "qualifiers": [],
           "references": []
-        }
-      },
-      "InvalidStatementTypeExample": {
-        "value": {
-          "code": "invalid-statement-type",
-          "message": "Not a valid statement type",
-          "context": {
-            "path": "{property_id}/{index}"
-          }
         }
       },
       "StatementGroupPropertyIdMismatch": {
